mockers_derive/tests/compile-fail/where_clause.rs
use mockers_derive::mocked;

#[mocked]
trait A where Self : 'static {}

fn main() {}
